tests/checker/ok/product_three_field_construction.can
CompletionTokens = Int

PromptTokens = Int

TotalTokens = Int

Usage = CompletionTokens * PromptTokens * TotalTokens

main = () => Unit {
    0 -> CompletionTokens -> Usage(0 -> PromptTokens * 0 -> TotalTokens).CompletionTokens -> Print
}
