tests/checker/fail/camelcase_function.can
double = (Int) => Int {
    Int -> Product(2)
}

Unit => Program {
    2.double() -> String -> Print
}
